# fancy-abak

./: .gitignore  README.md  __init__.py  abak.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonapp.yml
abak_config/: __init__.py  remove.py  set.py  show.py
abak_context/: abak_context.py
abak_shared_functions/: __init__.py  abak_configuration_functions.py  exceptions.py  prompt_funcs.py  requests_functions.py
client/: __init__.py  clients.py
fancy-abak/: setup.py
fancy-abak/.github/workflows/: pythonapp.yml
fancy_abak/: abak.py  do.py
fancy_abak/abak_config/: remove.py  set.py  show.py
fancy_abak/abak_context/: __init__.py  abak_context.py
fancy_abak/abak_shared_functions/: __init__.py  abak_configuration_functions.py  bsgenerator.py  option_check.py  requests_functions.py
fancy_abak/client/: clients.py
fancy_abak/project/: __init__.py  projects.py
fancy_abak/timesheets/: timesheets.py
project/: __init__.py  projects.py
timesheets/: __init__.py  timesheets.py
