[tool.poetry]
name = "fancy-abak"
version = "2.0.0"
description = "Fancy Abak CLI"
authors = ["Gui Martins <gmartins@fancywhale.ca>"]
license = "MIT"
readme = "README.md"
homepage = "https://abak.fancywhale.ca"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
zipp = "^3.17.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
tabulate = "^0.9.0"
pyfzf = "^0.3.1"
keyring = "^24.2.0"

[tool.poetry.scripts]
abak = "fancy_abak.abak:abak"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
